--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -1,10 +1,13 @@
 ﻿key;en;da
+about;About;Profil
 additionalInfo;Additional info;Supplerende information
 cancel;Cancel;Annuller
 cannotDeleteAdmin;Cannot delete admin user;Admin bruger kan ikke slettes
 close;Close;Luk
 closeDialog;Close dialog;Luk dialog
+collection;Collection;Kollektion
 confirmPassword;Confirm password;Gentag adgangskode
+contact;Contact;Kontakt
 criterionMet;Criterion met;Kriterium opfyldt
 criterionNotMet;Criterion not met;Kriterium ikke opfyldt
 email;Email;E-mail
@@ -15,6 +18,8 @@ eyeClosed;Closed eye;Lukket øje
 fillAll;Please fill all the inputs;Udfyld venligst alle felter
 goBack;Go back;Gå tilbage
 goToContent;Go to content;Gå til indhold
+heroText;Upgrade your wardrobe with exclusive deals! For a limited time, enjoy incredible discounts on the latest fashion trends.;Opgradér din garderobe med eksklusive tilbud! I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends.
+heroTitle;Exclusive Fashion Sale;Eksklusivt Modesalg
 hidePassword;Hide password;Skjul adgangskode
 home;Home;Hjem
 invalidEmail;Invalid email;Ugyldig e-mail
@@ -23,9 +28,7 @@ invalidPassword;Invalid password;Ugyldig adgangskode
 invalidUserData;Invalid user data;Ugyldig bruger data
 loading;Loading;Loading
 loggedOut;Logged out successfully;Logget ud
-loggedOut;Logged out successfully;Logget ud 
 login;Login;Log ind
-loginFailed;Login failed;Login mislykkedes
 loginFailed;Login failed;Login mislykkedes
 loginSucceeded;Login succeeded;Login lykkedes
 noEmail;Please provide a email;Indtast venligst en e-mail
@@ -39,12 +42,8 @@ passwordDoNotMatch;The passwords do not match;Adgangskoderne stemmer ikke overen
 passwordLowercase;Password should contain at least one lowercase letter;Adgangskoden skal indeholde mindst ét lille bogstav
 passwordLowercase;Password should contain at least one lowercase letter;Adgangskoden skal indeholde mindst ét lille bogstav
 passwordMinLength;Password should be at least 8 characters;Adgangskoden skal være mindst 8 tegn
-passwordMinLength;Password should be at least 8 characters;Adgangskoden skal være mindst 8 tegn
-passwordNumber;Password should contain at least one number;Adgangskoden skal indeholde mindst ét tal
 passwordNumber;Password should contain at least one number;Adgangskoden skal indeholde mindst ét tal
 passwordSymbol;Password should contain at least one special character;Adgangskoden skal indeholde mindst ét specialtegn
-passwordSymbol;Password should contain at least one special character;Adgangskoden skal indeholde mindst ét specialtegn
-passwordUppercase;Password should contain at least one uppercase letter;Adgangskoden skal indeholde mindst ét stort bogstav
 passwordUppercase;Password should contain at least one uppercase letter;Adgangskoden skal indeholde mindst ét stort bogstav
 pleaseEnter;Please enter;Indsæt venligst
 pleaseEnterName;Please enter  name;Indsæt venligst navn
@@ -52,16 +51,14 @@ pleaseEnterPassword;Please enter password;Indsæt venligst adgangskode
 pleaseEnterValidEmail;Please enter a valid email;Indsæt venligst en gyldig e-mail
 pleaseEnterValidEmail;Please enter a valid email;Indsæt venligst en gyldig e-mail
 retry;Retry;Forsøg igen
+shopNow;Shop now;Køb nu
 showPassword;Show password;Vis adgangskode
 signup;Signup;Opret bruger
-signupFailed;Sign up failed;Registrering mislykkedes
 signupFailed;Sign up failed;Registrering mislykkedes
 signupSucceeded;Sign up succeeded;Registrering lykkedes
 sub;Sub;Sekundær
 success;Success;Succes
 user;User;Bruger
-userAlreadyExist;A profile with this email already exists. Try logging in instead;Der findes en profil med denne e-mail. Prøv at logge ind i stedet
-userAlreadyExist;A profile with this email already exists. Try logging in instead;Der findes en profil med denne e-mail. Prøv at logge ind i stedet
 userAlreadyExist;A profile with this email already exists. Try logging in instead;Der findes en profil med denne e-mail. Prøv at logge ind i stedet
 userDeleted;User deleted;Bruger slettet
 userInfo;User info;Bruger info
