--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -20,7 +20,8 @@ eyeClosed;Closed eye;Lukket øje
 fillAll;Please fill all the inputs;Udfyld venligst alle felter
 goBack;Go back;Gå tilbage
 goToContent;Go to content;Gå til indhold
-heroText;Upgrade your wardrobe with exclusive deals! For a limited time, enjoy incredible discounts on the latest fashion trends.;Opgradér din garderobe med eksklusive tilbud! I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends.
+heroText;Upgrade your wardrobe with exclusive deals!;Opgradér din garderobe med eksklusive tilbud!
+heroText1;For a limited time, enjoy incredible discounts on the latest fashion trends;I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends
 heroTitle;Exclusive Fashion Sale;Eksklusivt Modesalg
 hidePassword;Hide password;Skjul adgangskode
 home;Home;Hjem
