--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -82,3 +82,4 @@ userDeleted;User deleted;Bruger slettet
 userInfo;User info;Bruger info
 username;UserName;Brugernavn
 warning;Warning;Warning
+welcome;Welcome;Velkommen
