--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -19,6 +19,7 @@ errorAltText;A really guilty emoji;En meget skyldig emoji
 eye;Eye;Øje
 eyeClosed;Closed eye;Lukket øje
 fillAll;Please fill all the inputs;Udfyld venligst alle felter
+globe;Globe;Globus
 goBack;Go back;Gå tilbage
 goToContent;Go to content;Gå til indhold
 heroText;Upgrade your wardrobe with exclusive deals!;Opgradér din garderobe med eksklusive tilbud!
