--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -1,5 +1,6 @@
 ﻿key;en;da
 about;About;Profil
+account;Account;Konto
 admin;Admin;Admin
 additionalInfo;Additional info;Supplerende information
 bag;Bag;Indkøbskurv
