--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -25,6 +25,7 @@ errorAltText;A really guilty emoji;En meget skyldig emoji
 eye;Eye;Øje
 eyeClosed;Closed eye;Lukket øje
 fillAll;Please fill all the inputs;Udfyld venligst alle felter
+filter;Filter;Filtrer
 globe;Globe;Globus
 goBack;Go back;Gå tilbage
 goToContent;Go to content;Gå til indhold
