--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -18,6 +18,7 @@ criterionNotMet;Criterion not met;Kriterium ikke opfyldt
 currency;Currency;Valuta
 customersList;Customers list;Kundeliste
 dashboard;Dashboard;Dashboard
+delete;Delete;Slet
 deleteCustomer;Delete customer;Slet kunde
 email;Email;E-mail
 error;Error;Fejl
