--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -10,6 +10,7 @@ cancel;Cancel;Annuller
 cannotDeleteAdmin;This action is not allowed for admin;Admin bruger kan ikke slettes
 categorieAlreadyExist;Category already exist;Kategori findes allerede
 categorieNotFound;Category not found;Kategori findes ikke
+categoryDeleted;Category deleted;Kategori blev slettet
 categories;Categories;Kategorier
 clearFilters;Clear filters;Ryd filtre
 clearSort;Clear sort;Ryd sortering
