--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -63,6 +63,7 @@ loginFailed;Login failed;Login mislykkedes
 loginHere;Log in here;Log ind her
 loginSucceeded;Login succeeded;Login lykkedes
 logout;Log out;Log ud
+newCategoryCreated;New category created;Ny kategori blev oprettet
 main;Main;Primær
 menu;Menu;Menu
 minLength;At least 8 characters;Mindst 8 tegn
